2007-11-26  Sebastien Bacher  <seb128@ubuntu.com>

	* main.c: (at_enable_update): enable the preferred applications button,
	  patch by Chris Jones (Closes: #499332)

2007-10-07  Luca Ferretti <elle.uca@libero.it>

	Fixes #484351

	* at-properties.desktop.in.in: don't use 'Preferences' word for
	application name.

2007-09-18  Jens Granseuer  <jensgr@gmx.net>

	Based on a patch by: Patrick Wade <patrick.wade@sun.com>

	* main.c: (close_logout_update), (setup_dialog): make logout button
	sensitive whenever accessibility settings have been enabled or
	disabled (closes bug #476921)

2007-06-02  Jens Granseuer  <jensgr@gmx.net>

	* at-startup-session.c:
	* at-startup-session.h: remove obsolete files
	* main.c: (at_enable_toggled): remove leftover bits from bug
	#386413 to make distcheck pass

2007-05-05  Jens Granseuer  <jensgr@gmx.net>

	* at-enable-dialog.glade:
	* main.c: (create_dialog): set button images via code instead of
	relying on glade, so they respect the gtk-button-images xsetting
	(closes bug #362880)

2007-05-05  Jens Granseuer  <jensgr@gmx.net>

	* at-enable-dialog.glade: fix critical warning

2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* at-properties.desktop.in.in: renamed Bugzilla product.

2007-04-26  George Kraft IV  <gk4@austin.ibm.com>

	Fixes #386413

	* main.c: (AT_STARTUP_DIR, AT_STARTUP_KEY, SR_PREFS_DIR),
	(init_startup_state, at_startup_toggled, at_startup_update_ui,
	(at_startup_changed): depricated the selection and startup
	of hardcoded assistive technologies.

	* main.c: (cb_at_preferences, cb_keyboard_preferences,
	cb_login_preferences): added callbacks to launch preference dialogs.

	* Makefile.am: depricated files at-startup-session.[ch]

	* at-enable-dialog.glade: removed the checkbox selection of
	assistive technologies and added a push button to launch
	the Preferred Applications dialog to setup ATs.

2007-04-08  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Kristof Vansant <de_lupus@pandora.be>