@@ -1,5 +1,10 @@
 2008-01-02  Denis Washington  <denisw@svn.gnome.org>
 
+	* gnome-keyboard-properties.c: Add --a11y command-line option to
+	show the Accessibility tab when started.
+
+2008-01-02  Denis Washington  <denisw@svn.gnome.org>
+
 	Merge all keyboard accessibility options into the keyboard capplet.
 
 	* gnome-keyboard-properties-a11y.[ch]: added
