@@ -1,3 +1,8 @@
+2008-01-02  Denis Washington  <denisw@svn.gnome.org>
+
+	* main.c: (cb_keyboard_preferences): Spawn the accessibility
+	tab of the keyboard capplet instead of at-properties.
+
 2007-11-26  Sebastien Bacher  <seb128@ubuntu.com>
 
 	* main.c: (at_enable_update): enable the preferred applications button,
